<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/thank_you"
            android:textSize="40sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/submitted"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <Button
                android:id="@+id/start_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_loginbtn"
                android:padding="15dp"
                android:text="@string/start_new"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/choose_dif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/selector_loginbtn"
                android:padding="15dp"
                android:text="@string/choose_different"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/progress_layout" />

</RelativeLayout>
