<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/selector_loginbtn"
                android:paddingLeft="50sp"
                android:paddingRight="50sp"
                android:text="@string/login_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_below="@+id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_login"
                android:hint="@string/login_pass"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:layout_below="@+id/ivLogo"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/edittext_login"
                android:hint="@string/login_name"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />

            <TextView
                android:id="@+id/tvWellcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/login_welcome"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvWellcome"
                android:layout_centerHorizontal="true"
                android:text="@string/login_please"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="12sp" />
        </RelativeLayout>
    </ScrollView>

    <include layout="@layout/progress_layout" />
</RelativeLayout>