<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/label_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/choose_comp_rel_search"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/search_company"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:completionThreshold="1"
            android:dropDownWidth="match_parent"
            android:inputType="text" />

        <Button
            android:id="@+id/add_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/selector_loginbtn"
            android:padding="15dp"
            android:text="@string/add_company_title"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/select_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_header_border1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/choose_comp_rel_select"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/select_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/select_label"
                android:background="@drawable/listview_border1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/selection_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/listview_header_border2"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/choose_comp_rel_selection"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/selection_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/selection_label"
                android:background="@drawable/listview_border2" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/selector_loginbtn"
        android:padding="15dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>