<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_background"
    android:orientation="vertical"
    tools:context="ua.com.lsoft.lincollect.fragments.SecondGroupQuestionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_comp_rel_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_comp_rel_search" />

                    <EditText
                        android:id="@+id/search_company"
                        style="@style/EditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:inputType="text" />

                </LinearLayout>

                <ListView
                    android:id="@+id/choose_company_list"
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <Button
                    android:id="@+id/add_company"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:background="@drawable/selector_loginbtn"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ListView
                    android:id="@+id/choosed_companies_list"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_below="@id/add_company" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_loginbtn"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>